<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/empty"
        android:title="Menu"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_dots">

        <menu>
            <item android:id="@+id/action_refresh"
                android:icon="@android:drawable/ic_menu_preferences"
                app:showAsAction="ifRoom"
                android:title="@string/refresh" />

            <item android:id="@+id/action_instructions"
                android:icon="@android:drawable/ic_menu_help"
                app:showAsAction="ifRoom"
                android:title="@string/instructions" />

            <item android:id="@+id/action_delete"
                android:icon="@android:drawable/ic_menu_day"
                app:showAsAction="ifRoom"
                android:title="@string/deleteAll" />

        </menu>

    </item>

</menu>