<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    android:background="#fae0e0"
    tools:context=".CreateTask">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scaleType="fitXY"
        android:src="@drawable/app_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <View
            android:layout_width="@dimen/mid_text"
            android:layout_height="match_parent"
            android:background="@color/green"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"
                android:hint="@string/task_title"
                android:textColor="#000000"
                android:gravity="center_vertical"
                android:fontFamily="@font/font" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <View
            android:layout_width="@dimen/mid_text"
            android:layout_height="match_parent"
            android:background="@color/red"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:hint="@string/description"
                android:textColor="#000000"
                android:gravity="center_vertical"
                android:fontFamily="@font/font"  />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="5"
        android:orientation="horizontal">
        <View
            android:layout_width="@dimen/mid_text"
            android:layout_height="match_parent"
            android:background="@color/blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="Task Status: "
            android:fontFamily="@font/font" />

        <Spinner
            android:id="@+id/input_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="@dimen/mid_text"
            android:text="@string/status"
            android:entries="@array/statusEntries"
            android:textColor="@color/grey"
            android:fontFamily="@font/font" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="5"
        android:orientation="horizontal">
        <View
            android:layout_width="@dimen/mid_text"
            android:layout_height="match_parent"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="Task Priority: "
            android:fontFamily="@font/font" />

        <Spinner
            android:id="@+id/input_priority"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="@dimen/mid_text"
            android:text="@string/status"
            android:entries="@array/priorityEntries"
            android:textColor="@color/grey"
            android:fontFamily="@font/font" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/xxxsmall_text"
            android:layout_marginBottom="5dp"
            android:background="@color/dark_text"/>
        <Button
            android:id="@+id/footerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Submit Task"
            android:background="@color/yellow"
            android:fontFamily="@font/font" />

    </LinearLayout>

</LinearLayout>